Fix bug where mark pushed down container and where mark didn't align perfectly with the top of the container

--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -99,7 +99,7 @@ code {
 /* Demo container. */
 #demo {
 	border: 3px solid #ccc;
-	padding: 10px;
+	padding: 0 10px;
 	margin-bottom: 100%;
 }
 
@@ -120,9 +120,12 @@ code {
 }
 
 #follow-me {
-	width: 100%;
-	border: 3px solid #ccc;
-	color: #888;
-	padding: 20px;
+	padding: 10px 0;
+}
+
+#follow-me .inner {
 	text-align: center;
+	color: #888;
+	border: 3px solid #ccc;
+	padding: 20px;
 }
